; ModuleID = '/home/carl/AnghaBench/mimikatz/modules/extr_sqlite3_omit.c_cume_distStepFunc.c'
source_filename = "/home/carl/AnghaBench/mimikatz/modules/extr_sqlite3_omit.c_cume_distStepFunc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.CallCount = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32**)* @cume_distStepFunc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cume_distStepFunc(i32* %0, i32 %1, i32** %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32**, align 8
  %7 = alloca %struct.CallCount*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32** %2, i32*** %6, align 8
  %8 = load i32, i32* %5, align 4
  %9 = icmp eq i32 %8, 1
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @UNUSED_PARAMETER(i32 %12)
  %14 = load i32*, i32** %4, align 8
  %15 = call i64 @sqlite3_aggregate_context(i32* %14, i32 16)
  %16 = inttoptr i64 %15 to %struct.CallCount*
  store %struct.CallCount* %16, %struct.CallCount** %7, align 8
  %17 = load %struct.CallCount*, %struct.CallCount** %7, align 8
  %18 = icmp ne %struct.CallCount* %17, null
  br i1 %18, label %19, label %36

19:                                               ; preds = %3
  %20 = load %struct.CallCount*, %struct.CallCount** %7, align 8
  %21 = getelementptr inbounds %struct.CallCount, %struct.CallCount* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = icmp eq i64 %22, 0
  br i1 %23, label %24, label %31

24:                                               ; preds = %19
  %25 = load i32**, i32*** %6, align 8
  %26 = getelementptr inbounds i32*, i32** %25, i64 0
  %27 = load i32*, i32** %26, align 8
  %28 = call i64 @sqlite3_value_int64(i32* %27)
  %29 = load %struct.CallCount*, %struct.CallCount** %7, align 8
  %30 = getelementptr inbounds %struct.CallCount, %struct.CallCount* %29, i32 0, i32 0
  store i64 %28, i64* %30, align 8
  br label %31

31:                                               ; preds = %24, %19
  %32 = load %struct.CallCount*, %struct.CallCount** %7, align 8
  %33 = getelementptr inbounds %struct.CallCount, %struct.CallCount* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 8
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %33, align 8
  br label %36

36:                                               ; preds = %31, %3
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @UNUSED_PARAMETER(i32) #1

declare dso_local i64 @sqlite3_aggregate_context(i32*, i32) #1

declare dso_local i64 @sqlite3_value_int64(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
